--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,11 +45,14 @@ h2 {
 
 body {
     background: url("../images/congruent_pentagon.png");
+    font-family: 'Oxygen', sans-serif;
 }
 
 h1 {
     text-align: center;
     margin: 10px;
+    font-size: 50px;
+    font-weight: 700;
 }
 
 .jumbotron {
@@ -73,17 +76,24 @@ form {
 
 #topic-input {
     width: 320px;
-    /* text-align: center; */
 }
 
 #add-more {
     margin: 0 auto;
-    margin-top: 10px;
+    margin-top: 15px;
     display: block;
     height: 40px;
     background-color: #23b136;
     border: none;
     color: #ffffff;
+}
+
+.topic {
+    height: 40px;
+}
+
+topic:hover {
+    cursor: pointer;
 }
 
 #buttons-view {
@@ -96,8 +106,4 @@ form {
     display: block;
 }
 
-.topic {
-    background-color: #d86800;
-    border: none;
-    height: 40px;
-}
+
